Fixed a bug where deleting items after a drag-drop sort would cause items to render out of sequence. Addressed an issue that caused files to be undefined after the first file finished uploading. Now quick-options closes itself anytime its item data changes, which happens when an item is deleted or added to the template repeater, which recycles its dom.

--- a/list/file-items.html
+++ b/list/file-items.html
@@ -77,9 +77,9 @@
 
 
 
-  /*For testing only
+  /*For testing only*/
 
-  .sortable {
+  /*.sortable {
     position: relative;
   }
 
@@ -91,8 +91,9 @@
     font-size: 20px;
     background-color: white;
     color: rebeccapurple;
-  }
-  */
+    z-index: 1;
+  }*/
+  
 
 </style>
 
@@ -122,8 +123,8 @@
 
 
 
-      <!-- Testing only
-       <div class="test-div">[[index]]</div> -->
+      <!-- Testing only -->
+       <!-- <div class="test-div">[[index]]</div> -->
 
 
 
