Pulled common events into an events-mixin file. Started work on file print and download functionality. Added print-js library.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -5,6 +5,31 @@
     z-index: 2;
   }
 
+  strong {
+    color:     var(--app-primary-color);
+    font-size: 20px;
+  }
+
+  .rename-modal-images {
+    height:       64px;
+    width:        64px;
+    margin-right: 8px;
+  }
+
+  .card-actions {
+    display:         flex;
+    justify-content: flex-end;
+  }
+
+  #dismiss-btn {
+    color: var(--app-primary-color);
+  }
+
+  #delete-btn {
+    background-color: var(--app-error-color, red);
+    color:            var(--constant-light-text);
+  }
+
 </style>
 
 
@@ -22,6 +47,7 @@
 </file-sources>
 
 
+<!-- _files from events-mixin.js -->
 <preview-lists id="lists"
                coll="[[coll]]"
                doc="[[doc]]"
@@ -29,18 +55,42 @@
                files="[[_files]]"
                hide-dropzone="[[hideDropzone]]"
                items="[[_items]]"
-               list="[[list]]"
-               on-delete-item="__deleteItemHandler">
+               list="[[list]]">
 </preview-lists>
 
 
-<fullscreen-carousel></fullscreen-carousel>
+<photo-carousel id="carousel"></photo-carousel>
 
 
 <image-editor id="editor"></image-editor>
 
 
 <app-spinner id="spinner"
-             allow-scrolling
              full-screen>
 </app-spinner>
+
+
+<app-modal id="deleteConfirmModal"
+           heading="Confirm Delete">
+
+  <div slot="card-content-slot">
+    <p>
+      Please confirm that you want to delete <strong>[[_deleteName]]</strong>
+    </p>
+    <p>
+      This action CANNOT be undone!
+    </p>
+  </div>
+  <div class="card-actions" 
+       slot="card-actions-slot">
+    <paper-button id="dismiss-btn" 
+                  on-click="__dismissDeleteConfirmButtonClicked">
+      dismiss
+    </paper-button>   
+    <paper-button id="delete-btn" 
+                  on-click="__confirmDeleteButtonClicked">
+      delete
+    </paper-button>      
+  </div>
+
+</app-modal>
