--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -11,12 +11,12 @@
 <app-header-overlay id="overlay"
                     header-size="1"
                     prebuilt-animation="from-right"
-                    title="Fullscreen Carousel">
+                    title="My Photos">
 
   <div id="container" 
        slot="container">
 
-    Sup
+    Photos
 
   </div>
 
