--- a/shared/file-thumbnail.html
+++ b/shared/file-thumbnail.html
@@ -2,15 +2,22 @@
 <style>
 
   :host {
-    display:  block;   
-    height:   100%;
-    overflow: hidden;
+    display:         flex;
+    justify-content: center;
+    align-items:     center;   
+    height:          100%;
+    overflow:        hidden;
     --thumbnail-border-radius: inherit; /* Another Safari fix. */
   }
 
+  iron-icon {
+    height: 50%;
+    width:  50%;
+  }
+
   .item {
-    width:  100%;
     height: 100%; 
+    width:  100%;
   }
 
   lazy-image {
@@ -26,9 +33,7 @@
 
 <template is="dom-if"
           if="[[__computeIronIconStamp(item.type)]]">
-  <iron-icon class="item"
-             icon="file-icons:audio">
-  </iron-icon>
+  <iron-icon icon="[[__computeIcon(item.type)]]"></iron-icon>
 </template>
 
 <template is="dom-if"
