Minor detail work including tweaked deleteModal styles, fixed a bug where upload-controls would not close on completion when file-list overlay was closed. Added share and edit buttons to quick-options. Added event listeners for upcomming share and editing functionality. Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -5,21 +5,6 @@
     z-index: 2;
   }
 
-  paper-progress {
-    width: 100%;
-    --paper-progress-active-color: var(--app-accent-color);
-  }
-
-  #print-btn {
-    background-color: var(--app-primary-color);
-    color:            var(--constant-light-text);
-  }
-
-  #print-btn[disabled] {
-    background-color: var(--app-disabled-color);
-    color:            var(--disabled-text-color);
-  }
-
   strong {
     color:     var(--app-primary-color);
     font-size: 20px;
@@ -77,7 +62,10 @@
 <photo-carousel id="carousel"></photo-carousel>
 
 
-<image-editor id="editor"></image-editor>
+<file-editor id="fileEditor"></file-editor>
+
+
+<image-editor id="imageEditor"></image-editor>
 
 
 <app-spinner id="spinner"
@@ -85,43 +73,18 @@
 </app-spinner>
 
 
-
-<app-modal id="printModal"
-           heading="Preparing Prints">
-
-  <div slot="card-content-slot">
-    <paper-progress value="[[_progress]]"></paper-progress>
-  </div>
-  <div class="card-actions" 
-       slot="card-actions-slot">
-
-    <paper-button class="dismiss-btn" 
-                  on-click="__cancelPrintBtnClicked">
-      cancel
-    </paper-button>
-
-    <paper-button id="print-btn"
-                  disabled="[[_disablePrintBtn]]" 
-                  on-click="__printBtnClicked">
-      print
-    </paper-button>    
-         
-  </div>
-
-</app-modal>
-
-
 <app-modal id="deleteConfirmModal"
            heading="Confirm Delete">
 
   <div slot="card-content-slot">
     <p>
-      Please confirm that you want to delete <strong>[[_deleteName]]</strong>
+      <strong>[[_deleteItem.displayName]]</strong>
     </p>
     <p>
       This action CANNOT be undone!
     </p>
   </div>
+
   <div class="card-actions" 
        slot="card-actions-slot">
 
