--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -13,8 +13,7 @@
                     prebuilt-animation="from-right"
                     title="Image Editor">
 
-  <div id="container" 
-       slot="container">
+  <div slot="content">
 
     Hi
 
