Multi delete, print and download functionality.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -77,9 +77,13 @@
            heading="Confirm Delete">
 
   <div slot="card-content-slot">
-    <p>
-      <strong>[[_deleteItem.displayName]]</strong>
-    </p>
+    <template is="dom-repeat"
+              items="[[_deleteItems]]">
+      <p>
+        <strong>[[item.displayName]]</strong>
+      </p>
+    </template>
+    
     <p>
       This action CANNOT be undone!
     </p>
