Added new 'createShareable' cloud function that makes a shareable copy of a file so that the client sdk can update its metadata independent of the original. This allows the original to be downloadable and the shareable copy to be previewed in the browser. The admin sdk does not currently update a file's metadata content-disposition field successfully.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -62,7 +62,10 @@
 </app-spinner>
 
 
-<share-modal id="shareModal"></share-modal>
+<share-modal id="shareModal"
+             item="[[_shareItem]]"
+             on-is-shareable="__updateShareable">
+</share-modal>
 
 
 <app-modal id="deleteConfirmModal"
