--- a/lists/file-items.html
+++ b/lists/file-items.html
@@ -118,7 +118,8 @@
                  doc="[[doc]]"
                  field="[[field]]"
                  hide-checkbox="[[hideCheckboxes]]"
-                 item="[[item]]">
+                 item="[[item]]"
+                 selected="[[all]]">
       </file-item>
 
 
