--- a/sources/device-file-card.html
+++ b/sources/device-file-card.html
@@ -33,7 +33,7 @@
                 raised
                 on-click="__chooserBtnClicked">
     <iron-icon class="shared-iron-icon-inside-paper-button" 
-               icon="file-icons:file-open">
+               icon="file-icons:folder-open">
     </iron-icon>
     browse device
   </paper-button> 
