--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -64,6 +64,7 @@
 
 
 <file-thumbnail class$="[[_selectedClass]]"
+                controls="[[_controls]]"
                 item="[[item]]"
                 on-click="__itemClicked">
 </file-thumbnail>
